# migrabadora

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup_app.py  test_input.py
.github/workflows/: ci.yml
docs/: blackhole_setup.md  quickstart.md  usage.md
scripts/: build.sh  build_simple_app.sh  create_dmg.sh  uninstall.sh
src/mp3recorder/: __init__.py  __main__.py  cli.py  config.py  dependencies.py  devices.py  logging_config.py  menubar.py  recorder.py  startup.py
tests/: conftest.py  test_cli.py  test_config.py  test_dependencies.py  test_devices.py  test_logging_config.py  test_recorder.py  test_startup.py
