[tool.poetry]
name = "mp3recorder"
version = "0.1.0"
description = "Minimal terminal-based MP3 audio recorder for macOS"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mp3recorder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sounddevice = "^0.5.0"
numpy = ">=1.26.0"
pydub = "^0.25.1"
audioop-lts = {version = "^0.2.1", python = ">=3.13"}
rumps = "^0.4.0"
imageio-ffmpeg = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
py2app = "^0.28.9"

[tool.poetry.scripts]
mp3recorder = "mp3recorder.cli:main"
mp3recorder-menubar = "mp3recorder.menubar:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mp3recorder"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG002"]  # Fixtures require args even if not directly used

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
